--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/lclaco/viajesChile" target="_blank"><i
+                        <a href="https://lclaco.github.io/viajesChile/" target="_blank"><i
                                 class="fab fa-github-square fa-2x" aria-hidden="true" data-toggle="tooltip"
                                 data-placement="top" title="GitHub"></i></a>
             </div>
